[gd_scene load_steps=12 format=3 uid="uid://cmoeum0oc0p2"]

[ext_resource type="Script" uid="uid://cir1ejxole7pu" path="res://sources/minigames/parakeets/parakeet.gd" id="1_p0nqk"]
[ext_resource type="PackedScene" uid="uid://cn2rw06pltyiu" path="res://sources/utils/fx/right.tscn" id="2_afmcm"]
[ext_resource type="SpriteFrames" uid="uid://wybpq21deku7" path="res://sources/minigames/parakeets/red_parakeet_animations.tres" id="2_k0dcm"]
[ext_resource type="LabelSettings" uid="uid://bguqnhiblwick" path="res://resources/themes/minigames_label_settings.tres" id="4_a2lqo"]
[ext_resource type="FontFile" uid="uid://bw8cb4e0a7ayj" path="res://assets/fonts/kalulu_mulish_regular.otf" id="4_xdkkw"]
[ext_resource type="PackedScene" uid="uid://dlmbxcgiv8tpr" path="res://sources/utils/fx/wrong.tscn" id="6_7mdw2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_45x46"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6a1p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aup5h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmhru"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2q8kg"]

[node name="Parakeet" type="Node2D"]
script = ExtResource("1_p0nqk")

[node name="RightFX" parent="." instance=ExtResource("2_afmcm")]
offset_top = -104.0
offset_bottom = -104.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_k0dcm")
animation = &"idle_front"
autoplay = "idle_front"
frame_progress = 0.660885
offset = Vector2(2.08165e-12, -82)

[node name="Label" type="Label" parent="."]
offset_left = -88.0
offset_top = -166.0
offset_right = 88.0
offset_bottom = -44.0
theme_override_fonts/font = ExtResource("4_xdkkw")
theme_override_font_sizes/font_size = 90
label_settings = ExtResource("4_a2lqo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = -91.0
offset_top = -255.0
offset_right = 90.0
offset_bottom = 13.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_45x46")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b6a1p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_aup5h")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mmhru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2q8kg")

[node name="WrongFX" parent="." instance=ExtResource("6_7mdw2")]
offset_top = -104.0
offset_bottom = -104.0

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
